Accessibility: darken brown color in wittliff sidebar to fix contrast error

--- a/resources/gato-template-wittliff/css/_colors.scss
+++ b/resources/gato-template-wittliff/css/_colors.scss
@@ -70,7 +70,7 @@ $wittliffbrown-light:   #847163;
 $wittliffbrown-dark:    #5f4737;
 $wittliffsand-light:    #e9e5e2;
 $wittliffstone:         #8A7C72;
-$wittliffwood:          #A66947;
+$wittliffwood:          #7D4C36;
 $darkgray:              #444444;
 $lightgray:             #DDDDDD;
 $reddishbrown:          #512515;
